nohup.out
  File "discordbot.py", line 17
    async def ShowEvents(self,ctx):
        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "discordbot.py", line 57, in <module>
    client.run(config['Defeault']['key'])
  File "/usr/lib/python3.6/configparser.py", line 959, in __getitem__
    raise KeyError(key)
KeyError: 'Defeault'
